Formulario de contacto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pacific Tour</title>
     <link rel="shortcut icon" href="imgs/mundo.png" type="">
     <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 <body>
     <main>
@@ -15,7 +16,7 @@
                 <a href="#">Inicio</a>
                 <a href="#">Sitios turísticos</a>
                 <a href="#">Puntos de interés</a>
-                <a href="#">Reservas</a>
+                <a href="form_reservas.html">Reservas</a>
                 <a href="#">Contacto</a>
             </nav>
             <section class="textos-header">
