Formulario de contacto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pacific Tour</title>
     <link rel="shortcut icon" href="imgs/mundo.png" type="">
     <link rel="stylesheet" href="css/estilos.css">
+    
 
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <a href="#">Sitios turísticos</a>
                 <a href="#">Puntos de interés</a>
                 <a href="form_reservas.html">Reservas</a>
-                <a href="#">Contacto</a>
+                <a href="form_contacto.html">Contacto</a>
             </nav>
             <section class="textos-header">
                 <h1>Con pacific Tour</h1>
