--- a/frm_contacto.html
+++ b/frm_contacto.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/estilos.css">
     <title>Contacto</title>
 </head>
-<body class="principal">
+<body class="principal-contacto">
     <header class="cabecera">
         <h1>Contactanos</h1>;
     </header>
