--- a/index.html
+++ b/index.html
@@ -8,20 +8,96 @@
     <title>Pacific Tour</title>
     <link rel="shortcut icon" href="imgs/mundo.png" type="">
     <link rel="stylesheet" href="css/estilos.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="index.js">
+    </script>
 
 </head>
 
 <body>
     <main>
         <header>
-            <nav>
-                <a href="#">Inicio</a>
-                <a href="#sitios">Sitios turísticos</a>
-                <a href="#contenido">Puntos de interés</a>
-                <a href="frm_reservas.html">Reservas</a>
-                <a href="frm_contacto.html">Contacto</a>
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(228, 233, 236);">
+                <div class="container-md">
+                    <a class="navbar-brand" href="#">
+                        <img src="imgs/logo.svg" alt="" width="70" height="54">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" href="#sitios">Sitios Turisticos</a>
+                            <a class="nav-link active" href="#">Puntos de Interes</a>
+                        </div>
+                    </div>
+                </div>
+                <form class="device-width">
+
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalReservas">
+    Reservas
+  </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="modalReservas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Reservas</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <section class="form-reserva">
+                                        <form id="formularioReserva">
+                                            <label for="nombre">Nombre</label></br>
+                                            <input type="text" name="nombre" id="nombre" class="cajas" placeholder="Nombre completo"></br>
+
+                                            <label for="email">Email</label></br>
+                                            <input type="email" name="email" id="email" class="cajas" placeholder="ejemplo@email.com"></br>
+
+                                            <label for="hotel">Hotel</label></br>
+                                            <select id="hotel" class="cajas">
+                                                <option >Hotel 1</option>
+                                                <option >Hotel 2</option>
+                                                <option >Hotel 3</option>
+                                                <option >Hotel 4</option>
+                                                <option >Hotel 5</option>
+                                            </select></br>
+
+                                            <label for="telefono">Teléfono</label></br>
+                                            <input type="number" name="telefono" id="telefono" class="cajas" placeholder="Telefono/Celular"></br>
+
+                                            <label for="llegada">Fecha y hora de llegada</label></br>
+                                            <input type="datetime-local" id="llegada" name="fecha-hora-llegada" class="cajas">
+                                            </br>
+
+                                            <label for="estadia">Días de permanencia</label></br>
+                                            <select id="estadia" class="cajas">
+                                                <option value="1" label="1">
+                                                <option value="2" label="2">
+                                                <option value="3" label="3">
+                                                <option value="4" label="4">
+                                                <option value="5" label="5">
+                                            
+                                            </select></br>
+
+
+                                        </form>
+                                    </section>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-primary" onclick="return validarReserva();">Guardar Cambios</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </nav>
+
             <section class="textos-header">
                 <h1>Pacific Tour</h1>
                 <h2>Disfruta de los mejores viajes al pacífico Colombiano</h2>
@@ -49,7 +125,7 @@
                     <div class="imagen-puntos">
                         <img src="imgs/bahia.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Bahía Solano</h1>
+                            <h5>Bahía Solano</h5>
                             <p>Este maravilloso lugar es reconocido por ser un paraíso para el ecoturismo y la aventura, en donde los visitantes pueden realizar un sinnúmero de actividades, aprovechando la riqueza natural y paisajística propia de la región.
                                 <br>
                                 <em>Tomado  de: uff.travel </em>
@@ -59,7 +135,7 @@
                     <div class="imagen-puntos">
                         <img src="imgs/nuqui.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Nuquí</h1>
+                            <h5>Nuquí</h5>
                             <p>Allí los visitantes pueden encontrar amplias playas para el disfrute, espacios para realizar caminatas ecológicas, cascadas, ríos y riachuelos, manglares, gran variedad de plantas y animales, termales, avistamiento de ballenas
                                 y otras actividades y atracciones. <br>
                                 <em>Tomado de: uff.travel</em></p>
@@ -68,7 +144,7 @@
                     <div class="imagen-puntos">
                         <img src="imgs/juanchaco.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Juanchaco y Ladrilleros</h1>
+                            <h5>Juanchaco y Ladrilleros</h5>
                             <p>Una de las actividades más atractivas es el avistamiento de ballenas, que tiene lugar cada año entre los meses de julio y octubre. Así mismo, se pueden realizar caminatas ecológicas, recorridos por los manglares y visita a
                                 playas cercanas como la Barra. <br><em>Tomado de: uff.travel</em></p>
                         </div>
@@ -76,7 +152,7 @@
                     <div class="imagen-puntos">
                         <img src="imgs/tumaco.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Tumaco</h1>
+                            <h5>Tumaco</h5>
                             <p>Ubicado en el departamento de Nariño, en el sur de Colombia, cerca a la frontera con Ecuador, este municipio es conocido también como la perla del Pacífico, dado que allí se encontró una de las más grandes perlas en los últimos
                                 tiempos. <br><em>Tomado de: uff.travel</em></p>
                         </div>
@@ -84,28 +160,28 @@
                     <div class="imagen-puntos">
                         <img src="imgs/gorgona.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Parque Nacional Natural Gorgona</h1>
+                            <h5>Parque Nacional Natural Gorgona</h5>
                             <p>Las aguas de este paraíso enclavado en el Pacífico colombiano albergan especies animales como ballenas yubartas o jorobadas, lobos marinos, marsopas, delfines, cachalotes, entre otros. <br><em>Tomado de: uff.travel</em></p>
                         </div>
                     </div>
                     <div class="imagen-puntos">
                         <img src="imgs/buenaventura.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Buenaventura</h1>
+                            <h5>Buenaventura</h5>
                             <p>Este municipio es el principal puerto marítimo de Colombia, que lo conecta con diferentes países de Asia, África y Oceanía. Aquí se da lugar a la dinámica comercial más grande del país. <br><em>Tomado de: uff.travel</em></p>
                         </div>
                     </div>
                     <div class="imagen-puntos">
                         <img src="imgs/katio.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Parque Nacional Natural los Katios</h1>
+                            <h5>Parque Nacional Natural los Katios</h5>
                             <p>Debe su nombre a los indígenas Embera-katíos que habitaron el sector. Se encuentra ubicado entre los departamentos de Chocó y Antioquia. Tiene una extensión de 72.000 hectáreas. <br><em>Tomado de: uff.travel</em></p>
                         </div>
                     </div>
                     <div class="imagen-puntos">
                         <img src="imgs/utria.png" alt="">
                         <div class="hover-galeria">
-                            <h1>Parque Nacional Natural Ensenada de Utría</h1>
+                            <h5>Parque Nacional Natural Ensenada de Utría</h5>
                             <p>En este parque los visitantes pueden realizar actividades propias del ecoturismo como caminatas, senderismo, observación de aves, avistamiento de ballenas, buceo, careteo, etc. <br><em>Tomado de: uff.travel</em>
 
                             </p>
@@ -117,7 +193,7 @@
         </section>
         <section class="portafolio">
             <div class="contenedor">
-                <h2 id="contenido" class="titulo">Puntos de interés</h2>
+                <h1 id="contenido" class="titulo">Puntos de interés</h1>
                 <div class="galeria-puntos">
                     <div class="imagen-puntos">
                         <img src="imgs/punto1.png" alt="">
@@ -181,15 +257,15 @@
         </section>
         <section class="usuarios-contenedor">
             <h2 class="titulo">Que dicen nuestros usuarios</h2>
-            <div class="cards">
-                <div class="card">
+            <div class="tarjetas">
+                <div class="tarjeta">
                     <img src="imgs/turistas1.png" alt="">
                     <div class="contenido-texto-card">
                         <h4>Nombre</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, ad.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="tarjeta">
                     <img src="imgs/turistas2.png" alt="">
                     <div class="contenido-texto-card">
                         <h4>Nombre</h4>
@@ -224,8 +300,38 @@
     <footer>
         <div class="contenedor-footer">
             <div class="contenedor-foo">
-                <h4>Telefono</h4>
-                <p>123456</p>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#modalContactanos"> Contactanos
+    
+                 </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modalContactanos" tabindex="-1" aria-labelledby="modalContactanosLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modalContactanosLabel">Contactanos</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body" class="principal-contacto">
+                                <section class="form-contacto">
+                                    <form id="formulario">
+                                        <label for="nombre">Nombre:</label>
+                                        <input id="nombre" name="nombre" placeholder="Nombre completo">
+                                        <label for="email">Email:</label>
+                                        <input id="email" name="email" type="email" placeholder="ejemplo@email.com">
+                                        <label for="mensaje">Mensaje:</label>
+                                        <textarea id="mensaje" name="mensaje" placeholder="Danos tu mensaje"></textarea><br>
+
+                                    </form>
+                                </section>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="button" onclick="return validarContacto();" class="btn btn-primary">Guardar Cambios</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="contenedor-foo">
                 <h4>email</h4>
